    Drop brocade plugin as it's been moved out of neutron tree.
  * d/neutron-plugin-nuage.install, d/control:
    Drop nuage plugin as it's been moved out of neutron tree.
  * d/neutron-common.install: Drop install of usr/bin/neutron-dev-server as
    pecan server is launched via a config option now instead.
  * d/p/ensure-tunnels-fully-reset.patch: Cherry-picked from upstream master.

 -- Corey Bryant <corey.bryant@canonical.com>  Thu, 21 Jan 2016 16:21:10 -0500

neutron (2:8.0.0~b1-0ubuntu2) xenial; urgency=medium

  * d/p/fix-db-migration.patch: Fix db migration failure noted in
    http://paste.openstack.org/show/480820/.

 -- Corey Bryant <corey.bryant@canonical.com>  Tue, 05 Jan 2016 13:29:41 -0500

neutron (2:8.0.0~b1-0ubuntu1) xenial; urgency=medium

  * d/tests/neutron-agents: Give daemon 5 seconds to start to prevent race.
  * New upstream milestone for OpenStack Mitaka.
  * d/control: Align (build-)depends with upstream.
  * d/p/iproute2-compat.patch: Dropped. Fixed upstream.
  * d/p/drop-ryu-dep.patch: Rebased.
  * Drop bigswitch plugin as it's moved out of tree:
    - d/control: Drop neutron-plugin-bigswitch(-agent) binary package.
    - d/neutron-plugin-bigswitch-agent.init.in: File removed.
    - d/neutron-plugin-bigswitch.install: File removed.
    - d/tests/bigswitch-plugin: File removed.
  * Drop OVSvApp agent binary as driver has moved out of tree:
    - d/neutron-plugin-openvswitch-agent.install: Don't install
      usr/bin/neutron-ovsvapp-agent.
  * Drop MidonetInterfaceDriver as it has moved out of tree:
    - d/control: Drop neutron-plugin-midonet binary package.
    - d/neutron-plugin-midonet.install: File removed.
    - d/tests/midonet-plugin: File removed.
  * Drop Mellanox ML2 mechanism driver as it has moved out of tree:
    - d/control: Drop neutron-plugin-mlnx(-agent) binary packages.
    - d/neutron-plugin-mlnx-agent.init.in: File removed.
    - d/neutron-plugin-mlnx(-agent).install: Files removed.