@@ -17,14 +17,14 @@ override_dh_install:
 	patch -p1 -R < debian/patches/fix-neutron-configuration.patch
 
 override_dh_systemd_enable:
-	dh_systemd_enable -pneutron-plugin-openvswitch-agent --name=neutron-ovs-cleanup \
+	dh_systemd_enable -pneutron-openvswitch-agent --name=neutron-ovs-cleanup \
 		neutron-ovs-cleanup.service
 	dh_systemd_enable -pneutron-plugin-linuxbridge-agent --name=neutron-linuxbridge-cleanup \
 		neutron-linuxbridge-cleanup.service
 	dh_systemd_enable
 
 override_dh_installinit:
-	dh_installinit -pneutron-plugin-openvswitch-agent --no-start \
+	dh_installinit -pneutron-openvswitch-agent --no-start \
         --name=neutron-ovs-cleanup
 	dh_installinit -pneutron-plugin-linuxbridge-agent --no-start \
         --name=neutron-linuxbridge-cleanup
